--- a/@docs/website/components/Sidebar/styles.module.css
+++ b/@docs/website/components/Sidebar/styles.module.css
@@ -1,4 +1,3 @@
-
 .burger {
     position: absolute;
     display: none;
@@ -20,7 +19,8 @@
     cursor: pointer;
 }
 
-.burger, .input {
+.burger,
+.input {
     top: 15px;
     left: 50%;
     transform: translateX(-50%);
@@ -57,7 +57,7 @@
     }
 
     .input:checked ~ .burger span {
-        transform: rotate(45deg)
+        transform: rotate(45deg);
     }
 
     .input:checked ~ .burger span:first-child {
