--- a/@docs/website/components/Sidebar/styles.module.css
+++ b/@docs/website/components/Sidebar/styles.module.css
@@ -48,7 +48,8 @@
     }
 
     .input:checked ~ .menu {
-        display: block;
+        display: inline-flex;
+        justify-content: center;
     }
 
     .input:checked ~ .burger {
