feat(examples/astro): add css usage in taddy

--- a/@examples/astro/src/pages/index.astro
+++ b/@examples/astro/src/pages/index.astro
@@ -7,7 +7,9 @@ import {css} from 'taddy';
 <Layout title="Welcome to Astro.">
     <main>
         <h1>Welcome to <span class="text-gradient">Astro</span></h1>
-        <h2 {...css({color: 'blue'})}>Hello world!</h2>
+        <h2 {...css({color: 'blue', textDecoration: 'underline'})}>
+            Hello world!
+        </h2>
         <p class="instructions">
             To get started, open the directory <code>src/pages</code> in your project.<br
             />
