feat: init test land

--- a/@docs/website/styles/globals.css
+++ b/@docs/website/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+
 html,
 body {
     padding: 0;
@@ -32,7 +34,39 @@ svg * {
     all: inherit;
 }
 
-li + li,
-li > ul {
+li+li,
+li>ul {
     margin-top: 10px;
+}
+
+.float {
+    animation: float 7s ease-in-out infinite;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-15px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes rotate {
+    0% {
+        transform: translateY(0) rotate(0deg);
+    }
+
+    50% {
+        transform: translateY(10px) rotate(20deg);
+    }
+
+    100% {
+        transform: translateY(0) rotate(0deg);
+    }
 }
